--- a/.gitignore
+++ b/.gitignore
@@ -103,7 +103,7 @@ hs_err_pid*
 ### Java-Web ###
 ## ignoring target file
 target/
-target
+*/target/**
 ### Maven ###
 pom.xml.tag
 pom.xml.releaseBackup
