--- a/asif-project1/.gitignore
+++ b/asif-project1/.gitignore
@@ -1,3 +1,4 @@
+/build/
 
 # Created by https://www.toptal.com/developers/gitignore/api/eclipse,code-java,java-web,java,maven
 # Edit at https://www.toptal.com/developers/gitignore?templates=eclipse,code-java,java-web,java,maven
