Read Address of corresponding user

--- a/asif-project1/WebContent/WEB-INF/web.xml
+++ b/asif-project1/WebContent/WEB-INF/web.xml
@@ -48,5 +48,15 @@
 		<url-pattern>/user/update</url-pattern>
 	</servlet-mapping>
 	
+	<servlet>
+		<servlet-name>detailServlet</servlet-name>
+		<servlet-class>org.ecom.controller.UserDetailController</servlet-class>
+	</servlet>
+
+	<servlet-mapping>
+		<servlet-name>detailServlet</servlet-name>
+		<url-pattern>/user/detail</url-pattern>
+	</servlet-mapping>
+	
 	
 </web-app>
