--- a/asif-project1/WebContent/WEB-INF/web.xml
+++ b/asif-project1/WebContent/WEB-INF/web.xml
@@ -4,7 +4,7 @@
 	xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
 	id="WebApp_ID" version="3.1">
 	<display-name>asif-project1</display-name>
-	
+
 	<welcome-file-list>
 		<welcome-file>index.jsp</welcome-file>
 	</welcome-file-list>
@@ -28,7 +28,7 @@
 		<servlet-name>deleteServlet</servlet-name>
 		<url-pattern>/user/delete</url-pattern>
 	</servlet-mapping>
-	
+
 	<servlet>
 		<servlet-name>createServlet</servlet-name>
 		<servlet-class>org.ecom.controller.UserCreateController</servlet-class>
@@ -38,7 +38,7 @@
 		<servlet-name>createServlet</servlet-name>
 		<url-pattern>/user/add</url-pattern>
 	</servlet-mapping>
-	
+
 	<servlet>
 		<servlet-name>updateServlet</servlet-name>
 		<servlet-class>org.ecom.controller.UserUpdateController</servlet-class>
@@ -48,7 +48,7 @@
 		<servlet-name>updateServlet</servlet-name>
 		<url-pattern>/user/update</url-pattern>
 	</servlet-mapping>
-	
+
 	<servlet>
 		<servlet-name>detailServlet</servlet-name>
 		<servlet-class>org.ecom.controller.UserDetailController</servlet-class>
@@ -58,6 +58,46 @@
 		<servlet-name>detailServlet</servlet-name>
 		<url-pattern>/user/detail</url-pattern>
 	</servlet-mapping>
+
+	<servlet>
+		<servlet-name>moneyServlet</servlet-name>
+		<servlet-class>org.ecom.controller.MoneyController</servlet-class>
+	</servlet>
+
+	<servlet-mapping>
+		<servlet-name>moneyServlet</servlet-name>
+		<url-pattern>/MoneyDetail/list</url-pattern>
+	</servlet-mapping>
+
+	<servlet>
+		<servlet-name>delmoneyServlet</servlet-name>
+		<servlet-class>org.ecom.controller.MoneyDetailDeleteController</servlet-class>
+	</servlet>
+
+	<servlet-mapping>
+		<servlet-name>delmoneyServlet</servlet-name>
+		<url-pattern>/MoneyDetail/delete</url-pattern>
+	</servlet-mapping>
 	
-	
+	<servlet>
+		<servlet-name>createmoneyServlet</servlet-name>
+		<servlet-class>org.ecom.controller.MoneyDetailCreateController</servlet-class>
+	</servlet>
+
+	<servlet-mapping>
+		<servlet-name>createmoneyServlet</servlet-name>
+		<url-pattern>/MoneyDetail/create</url-pattern>
+	</servlet-mapping>
+
+	<servlet>
+		<servlet-name>updmoneyServlet</servlet-name>
+		<servlet-class>org.ecom.controller.MoneyDetailUpdateController</servlet-class>
+	</servlet>
+
+	<servlet-mapping>
+		<servlet-name>updmoneyServlet</servlet-name>
+		<url-pattern>/MoneyDetail/Update</url-pattern>
+	</servlet-mapping>
+
+
 </web-app>
